src/snapshots/rmcp_openapi__server__tests__create_structured_error_content_generic_error.snap
---
source: src/server.rs
expression: json_result
---
{
  "body": {
    "error": {
      "message": "Internal server error",
      "type": "validation-error"
    }
  },
  "status": 400
}
