src/snapshots/rmcp_openapi__server__tests__create_structured_error_content_http_errors-2.snap
---
source: src/server.rs
expression: json_result
---
{
  "body": {
    "error": {
      "message": "Connection timeout",
      "type": "http-request-error"
    }
  },
  "status": 502
}
