src/snapshots/rmcp_openapi__server__tests__create_structured_error_content_validation.snap
---
source: src/server.rs
expression: json_result
---
{
  "body": {
    "error": {
      "message": "Missing required field",
      "type": "validation-error"
    }
  },
  "status": 400
}
