src/snapshots/rmcp_openapi__server__tests__tool_not_found_error_no_suggestions.snap
---
source: src/server.rs
expression: error_json
---
{
  "code": -32601,
  "message": "Tool 'completelyUnrelatedToolName' not found"
}
