src/snapshots/rmcp_openapi__server__tests__tool_not_found_error_with_suggestions.snap
---
source: src/server.rs
expression: error_json
---
{
  "code": -32601,
  "data": {
    "suggestions": [
      "getPetById",
      "getPetsByStatus"
    ]
  },
  "message": "Tool 'getPetByID' not found"
}
